GUI work - simplify Breadcrump fix for double entries in submissions - add title tag for input and label fields - modify layout-cookie for standard layout settings
Former-commit-id: aef1fe434850c7087d82fa3e0d8d0ade1493b2c0

--- a/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
@@ -118,7 +118,7 @@ All rights reserved. Use is subject to license terms.
  			<span type="button" id="btcheckBoxSelectButton" class="min_imgBtn checkBoxSelectButton"></span>
  			
  			<div class="large_area1 xTiny_marginLIncl selectMenu" style="display: none;">
- 				<span class="large_area0_p8" style="text-align:left;"><h:outputText value="#{lbl.List_SelectItem}"/></span>
+ 				<span class="large_area0_p8 selectMenuGroupTitle"><h:outputText value="#{lbl.List_SelectItem}"/></span>
  				<br />
  				<h:commandLink id="lnkList_lkAll" title="#{tip.List_lkAll}" disabled="true" styleClass="large_area0_p8 selectAll">
  					<span class="free_area0 tiny_marginLIncl"><h:outputText value="#{lbl.List_lkAllOnPage}"/></span>
