--- a/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
@@ -117,7 +117,7 @@
  			
  			
  			<div class="large_area1 xTiny_marginLIncl selectMenu" style="display: none;">
- 				<span class="large_area0_p8" style="text-align:left;"><h:outputText value="#{lbl.List_SelectItem}"/></span>
+ 				<span class="large_area0_p8 selectMenuGroupTitle" style="text-align:left;"><h:outputText value="#{lbl.List_SelectItem}"/></span>
  				<br />
  				<h:commandLink id="lnkList_lkAll" title="#{tip.List_lkAll}" disabled="true" styleClass="large_area0_p8 selectAll">
  					<span class="free_area0 tiny_marginLIncl"><h:outputText value="#{lbl.List_lkAllOnPage}"/></span>
