--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
@@ -444,7 +444,7 @@ body .wrapper {
 }
 
 .mpgUnit, .affTreeOUIcon {
-    background-image: url('../images/mnrv_23x23.gif');
+    background-image: url('../images/mnrv_23x23.png');
     background-repeat: no-repeat;
     background-position: center center;
 }
