--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/images.css
@@ -455,7 +455,7 @@ body .wrapper {
 }
 
 .mpgUnit {
-    background-image: url('../images/mnrv_23x23.gif');
+    background-image: url('../images/mnrv_23x23.png');
     background-repeat: no-repeat;
     background-position: center center;
 }
