background-color for licenseArea messageArea defined

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -765,3 +765,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
     border-left-width: 2px !important;
     border-right-width: 2px !important;
 }
+
+.licenseArea .messageArea {
+	background-color:#FFFFFF;
+}
