GUI work - missing borderline for cc license area fixed
Former-commit-id: 7a03740594ea0a887924eb944bb01196948b8058

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
@@ -234,7 +234,7 @@
 					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
 						  <span class="noDisplay">:</span>
 				</b>
-				<span class="xHuge_area0 xTiny_marginLExcl licenseArea endline">
+				<span class="free_area0 xTiny_marginLExcl licenseArea endline">
 					<h:panelGroup styleClass="quad_area0">
 						<label class="quad_label">
 							<span class="mandatory" title="<h:outputText value='#{msg.mandatoryField}' />">
