changed rendered conditions
Former-commit-id: 83c8e48d1a3cd3aabb34d9a615432b664b3c983d

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
@@ -164,7 +164,7 @@
 						<span class="xDouble_area0 tiny_marginRIncl endline">
 							<h:outputLabel id="lblFilesComponentVisibility" styleClass="xDouble_label" value="#{genre.files_component_visibility_label}" converter="GenreLabelConverter"/>
 							
-							<h:panelGroup layout="block" styleClass="xDouble_area1 endline selectContainer" rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}">
+							<h:panelGroup layout="block" styleClass="xDouble_area1 endline selectContainer">
 								<h:panelGroup layout="block" styleClass="xDouble_area0">
 									<h:panelGroup styleClass="xDouble_area0 selectionBox">&#160;</h:panelGroup>
 									<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
